# DepScraper

./: README.md  pyproject.toml
DepScraper/: __main__.py
DepScraper/scraper/: crawler.py  downloader.py
