[tool.poetry]
name = "depscraper"
version = "0.1.0"
description = ""
authors = ["hullabrian <Beierlejc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
beautifulsoup4 = "^4.12.2"
typer = "^0.9.0"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
